[Fix] api 명세 변경에 따른 코드 수정
