# src/docs/swagger.json
@@ -16,12 +16,66 @@
         "version": "1.0"
     },
     "paths": {
-        "/api/proxmox/network": {
-            "post": {
-                "description": "Proxmox Node의 Network 리스트를 가져옵니다.",
-                "consumes": [
+        "/api/proxmox/iso": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Proxmox Node의 ISO 이미지 리스트를 가져옵니다.",
+                "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "proxmox"
+                ],
+                "summary": "Proxmox ISO 이미지 리스트 가져오기",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Node 이름",
+                        "name": "node",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ISO 이미지 리스트",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "잘못된 요청입니다.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "서버 오류입니다.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/proxmox/network": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Proxmox Node의 Network 리스트를 가져옵니다.",
                 "produces": [
                     "application/json"
                 ],
@@ -31,13 +85,11 @@
                 "summary": "Proxmox Network 리스트 가져오기",
                 "parameters": [
                     {
-                        "description": "Proxmox Request Body",
-                        "name": "ProxmoxRequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ProxmoxRequestBody"
-                        }
+                        "type": "string",
+                        "description": "Node 이름",
+                        "name": "node",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -69,11 +121,13 @@
             }
         },
         "/api/proxmox/nodes": {
-            "post": {
-                "description": "Proxmox에서 Node 리스트를 가져옵니다.",
-                "consumes": [
-                    "application/json"
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
                 ],
+                "description": "Proxmox에서 Node 리스트를 가져옵니다.",
                 "produces": [
                     "application/json"
                 ],
@@ -81,17 +135,6 @@
                     "proxmox"
                 ],
                 "summary": "Proxmox Node 리스트 가져오기",
-                "parameters": [
-                    {
-                        "description": "Proxmox Credentials",
-                        "name": "ProxmoxCredentials",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ProxmoxCredentials"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Node 리스트",
@@ -105,8 +148,8 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "잘못된 요청입니다.",
+                    "401": {
+                        "description": "잘못된 토큰입니다.",
                         "schema": {
                             "type": "string"
                         }
@@ -164,11 +207,13 @@
             }
         },
         "/api/proxmox/storage": {
-            "post": {
-                "description": "Proxmox Node의 Storage 리스트를 가져옵니다.",
-                "consumes": [
-                    "application/json"
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
                 ],
+                "description": "Proxmox Node의 Storage 리스트를 가져옵니다.",
                 "produces": [
                     "application/json"
                 ],
@@ -178,13 +223,11 @@
                 "summary": "Proxmox Storage 리스트 가져오기",
                 "parameters": [
                     {
-                        "description": "Proxmox Request Body",
-                        "name": "ProxmoxRequestBody",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ProxmoxRequestBody"
-                        }
+                        "type": "string",
+                        "description": "Node 이름",
+                        "name": "node",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -212,14 +255,14 @@
                 }
             }
         },
-        "/api/proxmox/vm": {
+        "/api/proxmox/token": {
             "post": {
                 "security": [
                     {
                         "ApiKey": []
                     }
                 ],
-                "description": "Proxmox Node의 VM 리스트를 가져옵니다.",
+                "description": "Proxmox 인증 토큰을 생성합니다.",
                 "consumes": [
                     "application/json"
                 ],
@@ -229,7 +272,7 @@
                 "tags": [
                     "proxmox"
                 ],
-                "summary": "Proxmox VM 리스트 가져오기",
+                "summary": "Proxmox 인증 토큰 생성",
                 "parameters": [
                     {
                         "description": "Proxmox Credentials",
@@ -241,6 +284,43 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "토큰 생성 성공 메시지",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "잘못된 요청입니다.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "서버 오류입니다.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/proxmox/vm": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
+                "description": "Proxmox Node의 VM 리스트를 가져옵니다.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "proxmox"
+                ],
+                "summary": "Proxmox VM 리스트 가져오기",
                 "responses": {
                     "200": {
                         "description": "VM 리스트",
@@ -329,7 +409,7 @@
             }
         },
         "/api/user/refresh": {
-            "post": {
+            "get": {
                 "description": "유효한 리프레시 토큰을 사용하여 새로운 액세스 토큰을 재발급합니다.",
                 "consumes": [
                     "application/json"
@@ -456,17 +536,6 @@
                     "type": "string"
                 },
                 "userId": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.ProxmoxRequestBody": {
-            "type": "object",
-            "properties": {
-                "creds": {
-                    "$ref": "#/definitions/models.ProxmoxCredentials"
-                },
-                "node": {
                     "type": "string"
                 }
             }
