# src/proxmox/models/model.go
@@ -10,9 +10,9 @@ type ProxmoxCredentials struct {
 	Password string `json:"password"`
 }
 
-type ProxmoxRequestBody struct {
-	Node  string             `json:"node"`
-	Creds ProxmoxCredentials `json:"creds"`
+type ProxmoxToken struct {
+	Token     string
+	CsrfToken string
 }
 
 // Proxy는 사용자와 관련된 프록시 정보를 정의합니다.
