# src/proxmox/rest/proxmox.go
@@ -12,10 +12,11 @@ func ProxmoxRoutes(proxmox *gin.RouterGroup) {
 		log.Printf("Failed to create handler: %v", err)
 		return
 	}
-	proxmox.POST("/nodes", h.NodeHandler)
-	proxmox.POST("/vm", h.ProxmoxVMListHandler)
+	proxmox.POST("/token", h.TokenHandler)
+	proxmox.GET("/nodes", h.NodeHandler)
+	proxmox.GET("/vm", h.ProxmoxVMListHandler)
 	proxmox.GET("/proxy", h.ProxyHandler)
-	proxmox.POST("/network", h.NetworkInfoHandler)
-	proxmox.POST("/storage", h.StorageInfoHandler)
-	proxmox.POST("/iso", h.IsoInfoHandler)
+	proxmox.GET("/network", h.NetworkInfoHandler)
+	proxmox.GET("/storage", h.StorageInfoHandler)
+	proxmox.GET("/iso", h.IsoInfoHandler)
 }
