# src/proxmox/rest/util.go
@@ -9,12 +9,16 @@ import (
 	"fmt"
 	"hyperdesk/proxmox/models"
 	"io"
-	"log"
 	"net/http"
+	"strings"
+
+	"github.com/dgrijalva/jwt-go"
+	"github.com/gin-gonic/gin"
+	"github.com/go-errors/errors"
 )
 
 // fetchProxmoxDataForURL은 Proxmox API url을 통해 파라미터 method에 따른 요청을 보냅니다.
-func fetchProxmoxDataForURL(creds models.ProxmoxCredentials, url string, method string, bodyData ...[]byte) ([]interface{}, error) {
+func fetchProxmoxDataForURL(proxmoxToken models.ProxmoxToken, url string, method string, bodyData ...[]byte) ([]interface{}, error) {
 	// GET 요청의 경우 body를 nil로 설정
 	var bodyReader io.Reader
 	if len(bodyData) > 0 && (method == "POST" || method == "PUT") {
@@ -28,15 +32,9 @@ func fetchProxmoxDataForURL(creds models.ProxmoxCredentials, url string, method 
 		return nil, err
 	}
 
-	token, csrfToken, err := getProxmoxToken(creds)
-	if err != nil {
-		log.Printf("Failed to get Proxmox token: %v", err)
-		return nil, err
-	}
-
-	req.Header.Set("Authorization", "PVEAuthCookie="+token)
-	if csrfToken != "" {
-		req.Header.Set("CSRFPreventionToken", csrfToken)
+	req.Header.Set("Authorization", "PVEAuthCookie="+proxmoxToken.Token)
+	if proxmoxToken.CsrfToken != "" {
+		req.Header.Set("CSRFPreventionToken", proxmoxToken.CsrfToken)
 	}
 
 	// POST/PUT 요청에 대해 Content-Type 설정
@@ -83,4 +81,48 @@ func GenerateUniqueId(vmid, name, userid string, maxdisk string, maxmem string, 
 	data := fmt.Sprintf("%s:%s:%s:%s:%s:%d", vmid, name, userid, maxdisk, maxmem, cpu)
 	hash := sha256.Sum256([]byte(data))
 	return hex.EncodeToString(hash[:])
+}
+
+// getProxmoxTokenFromCookies는 쿠키에서 Proxmox 토큰과 CSRF 토큰을 추출합니다.
+func getProxmoxTokenFromCookies(c *gin.Context) (models.ProxmoxToken, error) {
+	token, err := c.Cookie("token")
+	if err != nil {
+		return models.ProxmoxToken{}, err
+	}
+
+	csrfToken, err := c.Cookie("csrfToken")
+	if err != nil {
+		return models.ProxmoxToken{}, err
+	}
+
+	retToken := models.ProxmoxToken{
+		Token:     token,
+		CsrfToken: csrfToken,
+	}
+
+	return retToken, nil
+}
+
+func (h *Handler) validateToken(c *gin.Context) (string, error) {
+	authHeader := c.GetHeader("Authorization")
+	if authHeader == "" {
+		return "", errors.New("Token not provided")
+	}
+
+	authHeaderParts := strings.Split(authHeader, " ")
+	if len(authHeaderParts) != 2 || authHeaderParts[0] != "Bearer" {
+		return "", errors.New("Invalid token format")
+	}
+
+	accessToken := authHeaderParts[1]
+	claims := &models.TokenClaims{}
+	jwtToken, err := jwt.ParseWithClaims(accessToken, claims, func(token *jwt.Token) (interface{}, error) {
+		return h.jwtKey, nil
+	})
+
+	if err != nil || !jwtToken.Valid {
+		return "", errors.New("Invalid token")
+	}
+
+	return claims.UserId, nil
 }
